# stsci.stimage

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CMakeLists.txt  INSTALL  INSTALL.rst  Install.html  Install.rst  LICENSE  MANIFEST.in  README  README.md  RECON-INFO  TEST  TODO  azure-pipelines.yml  cfg_calcos.py  cfg_convolve.py  cfg_image.py  cfg_imagemanip.py  cfg_imagestats.py  cfg_modules.py  cfg_ndimage.py  cfg_pydrizzle.py  cfg_pyraf.py  cfg_pysynphot.py  defsetup.py  docutils.conf  get_waf.py  just-an-irrelevant-change.txt  new_setup.cfg  new_testpk.py  pyproject.toml  setup.cfg  setup.py  test21.py  test22.py  test23.py  (+6 more)
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  publish-to-pypi.yml  test_devdeps.yml
betadrizzle/: defsetup.py
betadrizzle/lib/: util.py
convolve/: defsetup.py  new_setup.cfg  setup.cfg
convolve/lib/: Convolve.py  __init__.py  lineshape.py
convolve/test/: test_convolve.py  test_irafframe.py
convolve/tests/: test_convolve.py  test_irafframe.py
distutils/: README.txt  new_setup.cfg  new_setup.py  setup.cfg  setup.py
distutils/lib/stsci/distutils/: __init__.py  astutils.py  hooks.py  svnutils.py
distutils/lib/stsci/distutils/command/: build_optional_ext.py  easier_install.py
doc/source/: conf.py
docs/: docutils.conf  install.css
image/: new_setup.cfg
image/src/: _combinemodule.c
imagemanip/: defsetup.py  new_setup.cfg  setup.cfg  setup.py
imagemanip/lib/: __init__.py  interp2d.py  rebin.py
imagemanip/src/: bilinearinterp.c
imagemanip/test/: testImageManip.py
include/immatch/: geomap.h  xyxymatch.h
include/lib/: error.h  lintransform.h  polynomial.h  util.h  xybbox.h  xycoincide.h  xysort.h
include/surface/: cholesky.h  fit.h  surface.h  vector.h
lib/: __init__.py
lib/test/: test_xyxymatch.py
mirashift/: setup.py
mirashift/doc/: cleanImage.notes
mirashift/lib/: atrous.py  chipwavelets.py  edge_detect.py  findobjects.py  imageshift.py  linearfit.py  morph.py  num_pymorph.py  objectlist.py
mirashift/src/: chainMoments.c  expandArray.c
multidrizzle/: defsetup.py  new_setup.cfg  setup.cfg  setup.py
multidrizzle/doc/: History  (+1 more)
ndimage/: __init__.py  defsetup.py  new_setup.cfg  setup.cfg  setup.py
ndimage/docs/source/: conf.py  doccer.rst  filters.rst  fourier.rst  index.rst  interpolation.rst  io.rst  measurements.rst  morphology.rst
ndimage/lib/: __init__.py  _ni_support.py  filters.py  fourier.py  info.py  interpolation.py  measurements.py  morphology.py
ndimage/lib/stsci/ndimage/: __init__.py  filters.py
ndimage/lib/stsci/ndimage/test/: test_measurements.py  test_ndimage.py  test_regression.py
ndimage/lib/stsci/ndimage/tests/: test_filters.py
ndimage/src/: ni_morphology.c
ndimage/test/: test_ndimage.py
new_install/: PLAN  README  setup.py  stp_branch  stp_checkout  stp_install  stp_list  stp_remove  stp_tools  stp_versions.py
nictools/: defsetup.py  new_setup.cfg  setup.cfg  setup.py
opuscoords/: defsetup.py  new_setup.cfg  setup.cfg  setup.py
puftcorr/: setup.py
pydrizzle/: new_setup.cfg  setup.py
reftools/: defsetup.py  new_setup.cfg  setup.cfg
reftools/data/pctetab/: pctetab_chgleak_110425.txt  pctetab_chgleak_110718-1.txt  pctetab_chgleak_110718-2.txt  pctetab_chgleak_111129-2.txt  pctetab_column_scaling_111129.txt  pctetab_column_scaling_111214.txt  pctetab_column_scaling_120119.txt  pctetab_dtdel_110425.txt  pctetab_dtdel_111129.txt  pctetab_history.txt  pctetab_levels_110425.txt  pctetab_levels_111129.txt  pctetab_scaling_110718.txt  pctetab_scaling_110818.txt
reftools/doc/: Makefile  make.bat
reftools/doc/source/: conf.py  getphotpars.rst  imphtcomp.rst  index.rst  mkimphttab.rst  pctetab.rst  synpysyncomp.rst
reftools/lib/: __init__.py  getphotpars.py  graphfile.py  graphtab.py  makedxy.py  makesmall.py  mkimphttab.py  stsci_distutils_hack.py  tdspysyn  tdspysyn.help  tdspysyn.py  test_small_dgeo.py  wtraxyutils.py
reftools/lib/pars/: tdspysyn.cfg  tdspysyn.cfgspc
reftools/lib/reftools/: __init__.py  getphotpars.py  graphtab.py  imphtcomp.py  makedxy.py  makesmall.py  mkimphttab.py  pctetab.py  synpysyncomp.py  tdspysyn  tdspysyn.py  test_small_dgeo.py  wtraxyutils.py
reftools/lib/reftools/pars/: tdspysyn.cfg  tdspysyn.cfgspc
reftools/src/: compute_value.c  imphttab.h  py_compute_value.c
reftools/test/: test_get_phot_pars.py  test_imphtcomp.py  test_mkimphttab.py
reftools/test/test_data/: acs_sbc_dev_imp.fits  test_acs_wfc1_dev_imp.fits  test_wfc1_dev_imp.fits
release_tools/: README  README_new  branch_externals  check_branches  testenv
rnlincor/: setup.py
saaclean/: SP_FirstDerivatives.py  __init__.py  saaclean.py  setup.py
sample_package/: README  TEST  a.txt  defsetup.py
sample_project/: README  new_setup.cfg  new_setup.py  setup.cfg  setup.cfg.sample
sample_project/lib/stsci/: __init__.py
sample_project/lib/stsci/sample_package/: __init__.py  main.py
sample_project/lib/stsci/sample_package/tests/: test_func.py  test_oo.py
sample_project/scripts/: sample_package
src/: CMakeLists.txt  wscript
src/immatch/: geomap.c  xyxymatch.c
src/immatch/lib/: tolerance.c  triangles.c  triangles_vote.c
src/lib/: error.c  lintransform.c  polynomial.c  util.c  xybbox.c  xycoincide.c  xysort.c
src/surface/: cholesky.c  fit.c  surface.c  vector.c
src/wrap/: stimage_module.c  wrap_util.c  wrap_util.h
src/wrap/immatch/: py_geomap.c  py_xyxymatch.c
src_wrap/: stimage_module.c  wrap_util.c
stimage/: PKG-INFO  README  TODO  defsetup.py  new_setup.cfg
stsci.convolve/: setup.cfg
stsci.ndimage/: setup.cfg
stsci_sphinxext/: MANIFEST.in  README  defsetup.py  setup.py
stscidocs/: defsetup.py  readme.assemble  setup.py
temp_from_bias/: CalTempFromBias.py  CalTempFromBias2.py  caltempfrombias.py  tfbutil.py
test_c/: CMakeLists.txt  disabled_test_c.py  generate_test_data.c  test.h  test_c.py  test_cholesky.c  test_geomap.c  test_lintransform.c  test_surface.c  test_triangles.c  test_xycoincide.c  test_xysort.c  test_xyxymatch.c  test_xyxymatch_triangles.c  wscript
(+315 files in other folders)
