cmake_minimum_required(VERSION 3.17.0)
project(libstimage C)

set(STIMAGE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

option(ENABLE_WARNINGS BOOL ON)
if (ENABLE_WARNINGS)
    message(STATUS "Compiler warnings enabled")
    add_compile_options(-Wall -Wextra)
else()
    message(STATUS "Compiler warnings disabled")
endif()

option(ENABLE_ASAN_ADDRESS BOOL OFF)
if (ENABLE_ASAN_ADDRESS)
    message(STATUS "ASAN: address analyzer is enabled")
    add_compile_options(-fsanitize=address)
    add_link_options(-lasan)
else()
    message(STATUS "ASAN: address analyzer is disabled")
endif()

option(ENABLE_ASAN_LEAK BOOL OFF)
if (ENABLE_ASAN_LEAK)
    message(STATUS "ASAN: leak detection is enabled")
    add_compile_options(-fsanitize=leak)
    add_link_options(-llsan)
else()
    message(STATUS "ASAN: leak detection is disabled")
endif()

option(ENABLE_TESTING BOOL ON)
if (ENABLE_TESTING)
    message(STATUS "Test suite will be compiled")
    enable_testing()
    add_subdirectory(test_c)
else()
    message(STATUS "Test suite will NOT be compiled")
endif()

add_subdirectory(src)
