[project]
name = 'stsci.stimage'
description = 'Various image processing functions'
readme = 'README.md'
requires-python = '>=3.6'
license = { file = 'LICENSE' }
authors = [{ name = 'STScI', email = 'help@stsci.edu' }]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
    'numpy>=1.14',
]
dynamic = ['version']

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-cov',
]
docs = [
    'sphinx',
    'sphinx-automodapi',
    'sphinx-rtd-theme',
    'tomli; python_version <"3.11"'
]

[project.urls]
'Tracker' = 'https://github.com/spacetelescope/stsci.stimage/issues'
'Documentation' = 'https://stscistimage.readthedocs.io/en/latest/'
'Source Code' = 'https://github.com/spacetelescope/stsci.stimage'

[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm[toml] >=3.4",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "stsci/stimage/_version.py"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ['stsci']