[project]
name = "stsci.stimage"
description = "Various image processing functions"
requires-python = ">=3.9"
authors = [
    { name = "STScI", email = "help@stsci.edu" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.14",
]
dynamic = [
    "version",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE"
content-type = "text/plain"

[project.urls]
Tracker = "https://github.com/spacetelescope/stsci.stimage/issues"
Documentation = "https://stscistimage.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/spacetelescope/stsci.stimage"

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-cov',
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "sphinx-rtd-theme",
    "tomli; python_version <\"3.11\"",
]

[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm[toml] >=3.4",
    "wheel",
    "numpy>=2.0.0rc1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
include = [
    "stsci.stimage",
]

[tool.setuptools_scm]
write_to = "stsci/stimage/_version.py"
