[metadata]
name = stsci_python
version = dev
author = STScI
author-email = help@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python 
requires-python = >=2.5
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules

# NOTE: The order of requirements here matters, as there are dependencies
# between some of these packages
# TODO: Figure out a way to make the installation order less sensitive
requires-dist =
# Add d2to1 as a requirment so that we can go ahead and get it installed on the
# system and it doesn't have to be downloaded every other time it's required
    d2to1 (>=0.2.5)

# Install stsci.distutils early too, since many packages have it as a setup
# requirement
    stsci.distutils (==0.2)

# The following requirements are not technically part of stsci_python, but
# they are dependencies of some of the stsci_python packages, so in effect
# they are part of stsci_python# TODO: Should we distribute these in the stsci_python source package?  Need
# to determine this
    astrolib.coords (==0.37)
    pyfits (>=2.4.0)
    pysynphot (>=0.7)
    pywcs (>=1.10)
    pyraf (==1.11)
    stsci_sphinxext (==0.1)

# These are the projects that actually make up stsci_python
    stsci.tools (==3.0)
    stsci.convolve (==2.0)
    stsci.image (==2.0)
    stsci.imagemanip (==1.0)
    stsci.imagestats (==1.1)
    stsci.ndimage (==0.9.0)
    stsci.numdisplay (==1.5)
    stsci.stimage (==0.1)
    acstools (==1.4.0)
    calcos (==1.0)
    costools (==1.0)
    nictools (==1.0.1)
    opuscoords (==1.0)
    stwcs (==0.9)
    reftools (==1.5.2)
    stistools (==1.0)
    wfpc2tools (==1.0)
    pydrizzle (==6.3.7)
    multidrizzle (==3.3.5dev)
    betadrizzle (>=4.1.0dev)

[easy_install]
find-links = .
index-url = .
