[metadata]
name = stsci.stimage
version = 0.2.3
author = Michael Droettboom
author-email = help@stsci.edu
summary = Various image processing functions
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist = 
	numpy (>=1.5.1)

[files]
packages_root = lib
packages = 
	stsci
	stsci.stimage
	stsci.stimage.test

[extension=stsci.stimage._stimage]
sources = 
	src/immatch/geomap.c
	src/immatch/xyxymatch.c
	src/immatch/lib/tolerance.c
	src/immatch/lib/triangles.c
	src/immatch/lib/triangles_vote.c
	src/lib/error.c
	src/lib/lintransform.c
	src/lib/polynomial.c
	src/lib/util.c
	src/lib/xybbox.c
	src/lib/xycoincide.c
	src/lib/xysort.c
	src/surface/cholesky.c
	src/surface/fit.c
	src/surface/surface.c
	src/surface/vector.c
	src_wrap/stimage_module.c
	src_wrap/wrap_util.c
	src_wrap/immatch/py_xyxymatch.c
	src_wrap/immatch/py_geomap.c
include_dirs = 
	include
	src_wrap
	numpy

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[nosetests]
exclude = test_c

[global]
setup_hooks = 
	stsci.distutils.hooks.use_packages_root
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook

