[metadata]
name = stsci.stimage
author = STScI
author-email = help@stsci.edu
license = BSD-3-Clause
summary = Various image processing functions
project_urls =
    Tracker = https://github.com/spacetelescope/stsci.stimage/issues
    Documentation = https://stscistimage.readthedocs.io/en/latest/
    Source Code = https://github.com/spacetelescope/stsci.stimage
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
	numpy>=1.14
packages = find:
namespace_packages =
	stsci

[options.extras_require]
test =
    pytest
    pytest-cov
    codecov
docs =
	sphinx
	sphinx-automodapi
	sphinx-rtd-theme
