[metadata]
name = stsci.distutils
version = 0.2dev
author = Erik M. Bray
author-email = embray@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
summary = distutils/packaging-related utilities used by some of STScI's packages
description-file = README.txt
license = BSD
requires-python = >=2.5

requires-dist = distribute (>=0.6)

classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[files]
packages_root = lib
packages =
    stsci
    stsci.distutils
    stsci.distutils.command

[egg_info]
tag_svn_revision = True
