[metadata]
name = stsci.ndimage
version = 0.9.0
author = STScI
author-email = help@stsci.edu
summary = Various functions for multi-dimensional image processing--fork of
 scipy.ndimage for use with stsci_python
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python 
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist =
    numpy (>=1.5.1)

[files]
packages_root = lib
packages =
    stsci
    stsci.ndimage
    stsci.ndimage.tests
package_data = stsci.ndimage.tests = *.png

[global]
commands = stsci.distutils.command.easier_install.easier_install

[extension=stsci.ndimage._nd_image]
sources =
    src/nd_image.c
    src/ni_filters.c
    src/ni_fourier.c
    src/ni_interpolation.c
    src/ni_measure.c
    src/ni_morphology.c
    src/ni_support.c
include_dirs = numpy

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[sdist]
pre-hook.svn-info = stsci.distutils.hooks.svn_info_pre_hook
post-hook.svn-info = stsci.distutils.hooks.svn_info_post_hook

[build_py]
pre-hook.svn-info = stsci.distutils.hooks.svn_info_pre_hook
post-hook.svn-info = stsci.distutils.hooks.svn_info_post_hook

[easy_install]
find-links = ..
