[metadata]
name = reftools
version = 1.5.1
author = Warren Hack, Nadezhda Dencheva, Vicki Laidler, Matt Davis
author-email = help@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist =
    stsci.tools (==3.0)
    stsci.imagestats (==1.1)
    stsci.ndimage (==0.9.0)
    calcos (==1.0)
    stwcs (==0.9)
    pyfits (>=2.4.0)
    pysynphot (>=0.7)
    pywcs (>=1.10)
    numpy (>=1.5.1)

[files]
packages_root = lib
packages = 
    reftools
package_data =
    reftools = pars/* *.help
scripts =
    lib/reftools/tdspysyn

[extension=reftools._computephotpars]
sources =
    src/compute_value.c
    src/py_compute_value.c


[global]
commands = stsci.distutils.command.easier_install.easier_install

[easy_install]
find-links = ..
