# See setup.cfg.sample for a fully annotated version of this file and some
# additional options you can use.

[metadata]
name = sample_project
version = 1.0
summary = A sample of how the stsci_python projects should be structured
description-file = README
author = Mark Sienkiewicz, Erik M. Bray
author-email = help@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules


[files]
packages_root = lib
packages =
    stsci
    stsci.sample_package
    stsci.sample_package.tests
modules = sample_module
scripts = scripts/sample_package
package_data =
    stsci.sample_package.tests = *.dat
data_files =
    stsci/sample_package = a.txt b.txt


[global]
setup_hooks =
    stsci.distutils.hooks.use_packages_root
    stsci.sample_package.setup.hook


[sdist]
pre-hook.svn-info = stsci.distutils.hooks.svn_info_pre_hook
post-hook.svn-info = stsci.distutils.hooks.svn_info_post_hook


[build_py]
pre-hook.svn-info = stsci.distutils.hooks.svn_info_pre_hook
post-hook.svn-info = stsci.distutils.hooks.svn_info_post_hook


[build_ext]
pre-hook.sample-build-hook = stsci.sample_package.setup.build_ext_hook


[extension=stsci.sample_package.sscanf]
sources = src/sscanf.c
