[metadata]
name = stsci.convolve

# version is the *next* version to be release, with .dev at the end if it is not final
version = 2.1.dev

author = Todd Miller
author-email = help@stsci.edu
summary = Image array convolution functions
description = Formerly included in SciPy as scipy.stsci.convolve
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python 
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist =
    numpy (>=1.5.1)

[files]
packages =
    stsci
    stsci.convolve
    stsci.convolve.tests

[extension=stsci.convolve._correlate]
sources = src/_correlatemodule.c
define_macros =
    NUMPY = 1
include_dirs = numpy
extra_compile_args = -Wno-unused-function

[extension=stsci.convolve._lineshape]
sources = src/_lineshapemodule.c
define_macros =
    NUMPY = 1
include_dirs = numpy
extra_compile_args = -Wno-unused-function

[global]
setup-hooks =
    stsci.distutils.hooks.tag_svn_revision
    stsci.distutils.hooks.version_setup_hook

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[easy_install]
find-links = http://stsdas.stsci.edu/download/packages
